[tool.poetry]
name = "webhook"
version = "0.1.0"
description = "webhook handler with Flask"
authors = ["la-strole"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.3.2"
gunicorn = "^22.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
requests = "^2.31.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
